test/compile_failure/06_continue_outside_loop.c
// EXPECT-ERRORS: 1
// EXPECT: continue outside loop
int main() {
    continue;
    return 0;
}
